# masi-jewellers-website

./: .gitignore  README.md  restart_services.sh
.github/workflows/: deploy.yml
backend/: Cargo.toml  main.rs  temp_addition.txt
backend/src/: main.rs.backup  main_new.rs  main_simple.rs  main_with_customers.rs
database/migrations/: 001_customer_management.sql
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/customers/: page.tsx
frontend/src/lib/: api.ts
